[package]
name = "convosniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.45", features = ["sync"] }

[profile.release]
lto = "thin"
strip = "symbols"
